# my-game-engine

./: .gitignore  CMakeLists.txt  README.md
include/core/: ECS.h  Engine.h  Window.h  constants.h
include/systems/: Input.h  Physics.h  Renderer.h
src/: ECS.cpp  ECS.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  constants.h  engine.cpp  engine.h  main.cpp
src/core/: ECS.cpp  Engine.cpp  Window.cpp
src/systems/: Input.cpp  Physics.cpp  Renderer.cpp
